--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
+  <img src="images/logo.svg" alt="">
+  <h1>The Solar System</h1>
+
+  [Stars]
+  [Terrestrial planets]
+  [Gas giants]
+  [Dwarf planets]
+  [Asteroids]
+  [Comets]
+
+  ---
+
+  {banner}
+  The Solar System—our home in the stars
+
+  ---
+
+  The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.
 
 </body>
 </html>
