--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
-  <img src="images/logo.svg" alt="">
-  <h1>The Solar System</h1>
-
-  [Stars]
-  [Terrestrial planets]
-  [Gas giants]
-  [Dwarf planets]
-  [Asteroids]
-  [Comets]
-
-  ---
+  <header>
+    <img src="images/logo.svg" alt="">
+    <h1>The Solar System</h1>
+    <nav>
+      <ul>
+        <li>Stars</li>
+        <li>Terrestrial planets</li>
+        <li>Gas giants</li>
+        <li>Dwarf planets</li>
+        <li>Asteroids</li>
+        <li>Comets</li>
+      </ul>
+    </nav>
+  </header>
 
   {banner}
   The Solar System—our home in the stars
