--- a/index.html
+++ b/index.html
@@ -11,22 +11,23 @@
     <h1>The Solar System</h1>
     <nav>
       <ul>
-        <li>Stars</li>
-        <li>Terrestrial planets</li>
-        <li>Gas giants</li>
-        <li>Dwarf planets</li>
-        <li>Asteroids</li>
-        <li>Comets</li>
+        <li><a href="#">Stars</a></li>
+        <li>><a href="#">Terrestrial planets</a></li>
+        <li>><a href="#">Gas giants</a></li>
+        <li>><a href="#">Dwarf planets</a></li>
+        <li>><a href="#">Asteroids</a></li>
+        <li>><a href="#">Comets</a></li>
       </ul>
     </nav>
   </header>
 
-  {banner}
+<main>
+
   The Solar System—our home in the stars
 
   ---
 
   The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.
-
+</main>
 </body>
 </html>
