Added banner figure

--- a/index.html
+++ b/index.html
@@ -12,20 +12,21 @@
     <nav>
       <ul>
         <li><a href="#">Stars</a></li>
-        <li>><a href="#">Terrestrial planets</a></li>
-        <li>><a href="#">Gas giants</a></li>
-        <li>><a href="#">Dwarf planets</a></li>
-        <li>><a href="#">Asteroids</a></li>
-        <li>><a href="#">Comets</a></li>
+        <li><a href="#">Terrestrial planets</a></li>
+        <li><a href="#">Gas giants</a></li>
+        <li><a href="#">Dwarf planets</a></li>
+        <li><a href="#">Asteroids</a></li>
+        <li><a href="#">Comets</a></li>
       </ul>
     </nav>
   </header>
 
 <main>
+<figure>
+  <img src="images/banner" alt="">
+  <figcaption>The Solar System—our home in the stars</figcaption>
+</figure>
 
-  The Solar System—our home in the stars
-
-  ---
 
   The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.
 </main>
