--- a/index.html
+++ b/index.html
@@ -21,14 +21,13 @@
     </nav>
   </header>
 
-<main>
-<figure>
-  <img src="images/banner" alt="">
-  <figcaption>The Solar System—our home in the stars</figcaption>
-</figure>
+  <main>
+    <figure>
+      <img src="images/banner" alt="">
+      <figcaption>The Solar System—our home in the stars</figcaption>
+    </figure>
 
-
-  The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.
-</main>
+    <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
+  </main>
 </body>
 </html>
