--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <main>
     <figure>
-      <img src="images/banner" alt="">
+      <img src="images/banner.svg" alt="">
       <figcaption>The Solar System—our home in the stars</figcaption>
     </figure>
 
